# paks

./: .gitignore  Cargo.toml  README.md  ROADMAP.md  amplify.yml  bts.jsonc  cliff.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.sh  summary.md  turbo.json
.github/workflows/: build-and-release.yml  ci.yml
apps/cli/: Cargo.toml  package.json
apps/cli/src/: main.rs
apps/cli/src/commands/: agent.rs  create.rs  info.rs  install.rs  list.rs  login.rs  mod.rs  publish.rs  remove.rs  search.rs  validate.rs
apps/cli/src/commands/core/: config.rs  git.rs  mod.rs  skill.rs
apps/docs/: package.json  vite.config.ts
apps/docs/content/docs/: agents.mdx  commands.mdx  index.mdx  skill-spec.mdx
apps/docs/src/lib/: layout.shared.tsx  source.ts
apps/docs/src/routes/: __root.tsx  index.tsx
apps/docs/src/routes/docs/: $.tsx
apps/docs/src/styles/: app.css
apps/fumadocs/: package.json
apps/web/: package.json  vite.config.ts
apps/web/public/: robots.txt
apps/web/public/icons/: manifest.json
apps/web/src/: index.css  routeTree.gen.ts  router.tsx
apps/web/src/components/: features.tsx  file-explorer.tsx  footer.tsx  hero.tsx  install-command.tsx  navbar.tsx  pagination.tsx  pak-card.tsx  pak-sidebar.tsx  readme-viewer.tsx  trending-paks.tsx  version-list.tsx
apps/web/src/routes/: __root.tsx  index.tsx  search.tsx  trending.tsx
apps/web/src/routes/api/: og.$owner.$name.png.tsx  sitemap.xml.ts
apps/web/src/routes/pak/: $owner.$name.tsx
