[workspace]
resolver = "2"
members = [
    "apps/cli",
    "packages/core",
    # Add more Rust apps/packages here
]

# Shared dependencies across workspace
[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
