[workspace]
resolver = "2"
members = [
    "apps/cli",
    "packages/core",
    "packages/api/rust",
    "packages/api/schema",
    # Add more Rust apps/packages here
]
default-members = ["apps/cli"]

# Shared dependencies across workspace
[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
indexmap = { version = "2", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
url = "2"
urlencoding = "2"
schemars = { version = "0.8", features = ["chrono", "uuid1"] }

[workspace.package]
version = "0.1.6"
edition = "2024"
license = "MIT"
