[package]
name = "paks-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "paks"
path = "src/main.rs"

[dependencies]
clap.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
indexmap.workspace = true
toml = "0.8"
dirs = "6"
serde_yaml_ng = "0.10"  # For parsing SKILL.md frontmatter (Agent Skills spec compatibility)
shellexpand = "3.1.1"
paks-api = { path = "../../packages/api/rust" }
tempfile = "3"
dialoguer = "0.11"  # Interactive prompts

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
